Commit from Hack Club Spaces

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Website</title>
-    <link rel="stylesheet" href="/s/awesome/styles.css">
+    <link rel="stylesheet" href="/s/water/styles.css">
     <script src="/s/awesome/script.js" defer></script>
 </head>
 <body>
